hphp/test/zend/good/ext/reflection/tests/ReflectionObject_getName_error1.php.expectf

Fatal error: Non-static method ReflectionClass::getName() cannot be called statically in %s/ReflectionObject_getName_error1.php on line 2
